Prevent wrapping of sorting options

--- a/public/style.css
+++ b/public/style.css
@@ -61,8 +61,9 @@ body > h2 {
 
 .sort-options {
   text-align: center;
+  max-width: 100%;
 }
 
 .sort-options > * {
-  font-size: 1em;
+  font-size: 0.9em;
 }
